# mkarchive

./: .gitignore  LICENSE  MANIFEST.in  README  README.rst  mkarchive.py  pyproject.toml  sample-installer.yml  selfextract.c  selfextract0.c  setup.cfg  smartsetup.py
archiver/: mkarchive.py  selfextract0.c  setup.sh
installer/: __init__.py  smartsetup.py
