[metadata]
name = mkarchive
version = 0.5.0
author = Javier Llopis
author_email = javier@llopis.me
description = Create Linux self-executables & installers based on 'dialog'
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/destrangis/mkarchive
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Operating System :: POSIX
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Software Distribution
    Topic :: System :: Installation/Setup
    Topic :: Utilities

[options]
py_modules = smartsetup, mkarchive
install_requires = PyYAML
include_package_data = True

[options.package_data]
* = *.c

[options.data_files]
 = selfextract0.c

[options.entry_points]
console_scripts =
    mkarchive = mkarchive:main
    smartsetup = smartsetup:main
